<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">
    <string name="front_gift_text"><![CDATA[<font color="#D17500">%s抽中</font> <font color="red">%s</font>]]></string>
    <string name="mine_user_login_tv">点击登录</string>
    <string name="mine_user_code">邀请码：</string>
    <string name="mine_user_login_hint">让运动更有价值</string>
    <string name="mine_user_gold">--</string>
    <string name="mine_code_hint">填写邀请码</string>
    <string name="mine_copy">复制</string>
    <string name="mine_now_gold_tv">当前金币</string>
    <string name="mine_shou_into">收支详情</string>
    <string name="mine_money_hint_tv">金额(元)</string>
    <string name="mine_my_service">我的客服</string>
    <string name="mine_run_record">步数记录</string>
    <string name="mine_my_service_url">customer</string>

    <string name="mine_invitation_tv">邀请好友</string>
    <string name="mine_invitation_tv_url">Invitation</string>
    <string name="mine_must_money">立即提现</string>
    <string name="mine_can_money">可提现</string>
    <string name="mine_can_money_tv">提现</string>
    <string name="mine_can_money_url">cash</string>
    <string name="mine_can_money_my">我的钱包</string>
    <string name="mine_can_my_money_url">wallet</string>
    <string name="mine_invi_tv">填写邀请码</string>
    <string name="mine_invitation_hint_tv">输入邀请码(向您的邀请人所要)</string>
    <string name="mine_submit">立即提交</string>
    <string name="mine_bind_tv">已绑定</string>
    <string name="mine_must_bind">点击绑定</string>

    <string name="mine_back_door_suuid">SUUID(长按复制):</string>
    <string name="mine_back_door_userid">用户ID(长按复制):</string>
    <string name="mine_back_door_pack">包名:</string>
    <string name="mine_back_door_channel">渠道号:</string>
    <string name="mine_back_door_surroundings">环境:</string>
    <string name="mine_back_door_vername">版本名称:</string>
    <string name="mine_back_door_vercode">版本号:</string>

    <string name="mine_rule">参加本活动前，请用户仔细阅读本活动规则及相关条款。凡参与本活动，则视用户已阅读、理解并同意本活动规则（包括活动参与条件、提现规则及注意事项等在内）的全部内容。
    参与活动
\n1.用户需通过【西瓜计步客户端】（“本产品”）进入游戏并完成微信登录后方能参与本活动。
\n2.用户在按照任务要求完成指定任务的情况下，可获得金币奖励。金币奖励获得后自动记入用户“账号设置”下的“当前金币”中，用户可进入相应页面进行查看。
\n3.不同任务可获得的奖励不同，请仔细阅读相应的任务要求。
\n    提现规则
\n1.用户可通过完成游戏内指定任务获得金币，具体任务及可获得的金币数量以本产品内相应页面为准。获得金币奖励后，请及时申请提现。每10000金币可提现1元人民币。每个用户每天可多次申请提现（同一终端设备、同一手机号、同一提现收款账号视为同一用户）。
\n2.用户前一笔提现申请在本产未审核完毕的情况下，不接受用户后续的提现申请。
\n3.提现有最低限额的要求，每个用户首次提现最低额度为0.3元。金币数量超过最低限额的方可提现，且用户仅可按页面所显示的提现额度申请提现金额，且每个用户每个额度只能提现一次。用户在游戏内获得的金币达到对应提现额度的数量要求后将激活提现任务，用户完成对应额度的提现任务后方可提现，不同的提现额度任务要求不同，具体以提现页面为准。用户每次提现需消耗一定的“提现券”数，不同提现额度所需的提现券数不同，具体以提现页面为准。用户可通过完成指定任务获得提现券，具体任务及可获得的提现券数量以本产品内相应页面为准。
\n4.金币将于用户按要求提交申请后的1个工作日内通过微信转账完成支付，但遇到提现高峰、法定节假日或微信平台的特殊情况可能导致提现到账时间延长。（提示：由于微信支付需要实名制，非实名制用户账户无法支持转账，请务必对收款的微信账户进行实名认证。）
\n5.用户理解并同意，用户进行提现应符合第三方支付平台或第三方提现服务提供者的要求，按照提现界面的提示进行规范操作，如因用户原因（如不符合第三方支付平台的要求等）导致无法进行提现的，用户理解并同意本产品无需承担任何责任。
\n6.连续60日未使用本产品的用户，视为用户自动放弃提现权益，其个人账户中的金币和提现券数量将清零，本产品不做任何赔偿或补偿。
\n7.为遵守国家关于代扣代繳个人所得税的相关规定，用户进行提现时需提供可验证的真实的身份信息以便本产品进行个人所得税的代扣代缴。若用户不提供该等身份信息，将无法进行提现，请理解本产品无需进行赔偿或补偿。
\n    注意事项
\n1.用户应妥善保管其个人账户信息，如用户不慎丢失个人账户，将无法通过本产品找回，用户将自行承担相关损失。本产品禁止用户私自租用、转让或售卖任何用户个人账户及其账户下的金币、现金或其他道具。基于用户个人账户所进行的所有参与任务、提现相关使用行为，均视为用户本人操作，代表用户的真实意思表示，本产品不对其产生的后果承担任何责任。
\n2.用户不得以任何不正当手段或舞弊方式参与本活动。一经发现，本产品有权对该用户及该用户的关联用户（如使用同一终端设备、同一手机号、同一提现收款账号的其他用户等）采取限制登录、封禁账号、撤销参与活动及获奖资格、限制再次注册使用等措施，本产品有权收回用户已经获得的奖励，追讨该用户已经提现的现金，并保留追究该用户责任的权利。如因此给用户造成损失，本产品不进行任何赔偿或补偿。不正当手段及舞弊行为包括但不限于：下载非官方客户端；使用模拟器、插件、外挂等非法工具扫码、下载、安装、注册、登录、赠与、领取奖励、现金或提现；注册多个账号；篡改设备数据；恶意牟利等扰乱本产品秩序；使用插件、外挂、系统或第三方工具对本产品及本活动进行干扰、破坏、修改或施加其他影响及本产品认为的其他不正当手段。
\n3.如因不可抗力、情势变更（包括重大灾害事件、活动受政府机关指令需要停止举办或调整的、活动遭受严重网络攻击或因系统故障等）、产品停运、业务调整等原因导致本活动需要停止或调整的，请理解本产品无需进行赔偿或补偿，亦无需为此承担任何法律责任。
\n4.因用户操作不当或用户所在地区网络故障、电信运营商故障、第三方支付平台限制等非本产品所能控制的原因导致的用户无法参与活动或参与失败，请理解本产品不进行任何赔偿或补偿，亦无需为此承担任何法律责任。
\n5.如因第三方通过各种不正当手段攻击、篡改，对本产品及本活动进行干扰、破坏、修改或施加其他影响或系统故障致使奖励发放发生错误、用户无法参与或参与失败的，用户理解并同意本产品无需进行赔偿或补偿，亦无需为此承担任何法律责任。
\n6.请用户务必通过本产品手机官方客户端参与本活动。任何第三方以本产品的名义宣称或从事类似活动、恶意通知用户中奖等造成用户损失的，请理解本产品不进行赔偿或补偿，亦无需为此承担任何法律责任。
\n7.用户理解并同意，本活动内的抽奖式活动奖品数量有限，且中奖几率随机，本产品不对用户的中奖结果做任何保证。请理性参与，本产品对于恶意投诉、举报、诋毁的行为将依法采取法律手段。
\n8.本产品内的每日金币发放和提现金额有上限，且上限根据本产品用户数量进行动态调整，具体限额及重置时间以相应页面显示的内容为准。本产品有权自主决定金币奖励额度及规则，保留在必要时根据经营策略调整所有用户每日金币奖励上限、提现上限、提现条件和方式的权利。在法律允许的范围内，本产品有权对本活动规则进行调整，相关调整将公布在活动规则页面上，并于公布时生效，用户如拒绝前述调整，请停止参与调整后的活动。
\n9.任何人不应利用本活动进行任何违法行为，对于本产品用户，一经发现，本产品有权取消此用户参与本活动的资格，收回所有奖品（包括现金、道具等一切活动奖励）。如其行为构成犯罪，本产品有权移交相应司法机关处理。如因其行为给本产品造成损失，还应承担赔偿责任。
\n10.本产品的《用户协议》和《隐私政策》同样适用于本活动，本活动规则及相关条款与《用户协议》和《隐私政策》相冲突的，以本活动规则及相关条款为准。
\n11.本产品保留在法律法规允许的范围内对上述规则解释的权利。
\n联系方式
\n对于本活动有任何疑问，可通过邮箱3175277360@qq.com与本产品联系。
</string>
    <string name="mine_str_about_money">约%s元</string>
</resources>