<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <com.donews.common.views.BaseTitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/rl_invitation_code_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_bar"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp">

            <TextView
                android:id="@+id/tv_invitation_code_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_invi_tv"
                android:textColor="#5B5B5B"
                android:textSize="29sp" />

            <TextView
                android:id="@+id/tv_invitation_code_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_invitation_code_text"
                android:layout_marginTop="7dp"
                android:text="@string/mine_invitation_hint_tv"
                android:textColor="#A4A4A4"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/rl_invitation_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_invitation_code_desc"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_invitation_code"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null" />

                <ImageView
                    android:id="@+id/iv_close_invitation_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@drawable/close_logo">

                </ImageView>
            </RelativeLayout>


            <View
                android:id="@+id/view_invitation_code_bottom_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rl_invitation_code"
                android:background="#F5F2F2" />


        </RelativeLayout>


        <Button
            android:id="@+id/rl_upload_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/rl_invitation_code_content"
            android:layout_marginLeft="53dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="53dp"
            android:background="@drawable/mine_code_btn_bg_sure"
            android:text="@string/mine_submit"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>
</layout>
